# project_template

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md
src/: main.cpp
src/util/: util.cpp  util.hpp
test/: untittest_myapp.cpp
